--- a/src/main/webapp/WEB-INF/templates/placeholder/placeholder.html
+++ b/src/main/webapp/WEB-INF/templates/placeholder/placeholder.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="/css/placeholderStyles.css">
+    <link href="../../../../resources/static/css/placeholderStyles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
