--- a/src/main/webapp/WEB-INF/templates/friendPage.html
+++ b/src/main/webapp/WEB-INF/templates/friendPage.html
@@ -45,6 +45,9 @@
         </form>
 
     </div>
+    <form th:action="@{/logout}" method="post">
+        <button type="submit">Logout</button>
+    </form>
 
     <!--<h3>userID<input type=number name=userID></h3>-->
 </div>
