--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -79,7 +79,7 @@
 						<span class="txt1">
 							Forgot
 						</span>
-                    <a class="txt2" href="#">
+                    <a class="txt2" href="/forgot">
                         Username / Password?
                     </a>
                 </div>
